--- a/core/src/main/res/values-ko/strings.xml
+++ b/core/src/main/res/values-ko/strings.xml
@@ -214,7 +214,7 @@
   <string name="confirm_mobile_download_dialog_message">휴대전화망 데이터 연결을 통한 다운로드는 설정에서 막혀 있습니다.\n\n임시로 다운로드를 열 수 있습니다\n\n<small>여기서 선택한 사항은 10분 동안 유지됩니다.</small></string>
   <string name="confirm_mobile_streaming_notification_title">휴대전화망 스트리밍 확인</string>
   <string name="confirm_mobile_streaming_notification_message">휴대전화 데이터 연결을 통한 스트리밍은 사용하지 않게 설정되어 있습니다. 그래도 스트리밍을 하려면 누르십시오.</string>
-  <string name="confirm_mobile_streaming_button_always">항상</string>
+  <string name="always">항상</string>
   <string name="confirm_mobile_streaming_button_once">한번만</string>
   <string name="confirm_mobile_download_dialog_only_add_to_queue">대기열에 추가</string>
   <string name="confirm_mobile_download_dialog_enable_temporarily">임시로 허용</string>
